overflow issue in mobile version fixed

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -12,6 +12,11 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
+html,
+body {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
 }
